--- a/reactor/.classpath
+++ b/reactor/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry excluding="*.launch" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="E:/workspace/hw1/reactor/bin/reactortest.jar"/>
+	<classpathentry kind="lib" path="/home/yangdeng/reactortest.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
